--- a/src/components/auth/login-form.scss
+++ b/src/components/auth/login-form.scss
@@ -1,5 +1,7 @@
+@import '../../variables';
+
 #login {
-    background: #ffffff;
+    background: $tt-white;
     margin-top: 5px;
     padding: 40px;
     border-radius: 2px;
