--- a/src/components/home/group-filter/group-filter-header.scss
+++ b/src/components/home/group-filter/group-filter-header.scss
@@ -1,3 +1,5 @@
+@import '../../../variables';
+
 .group-filter-header {
     input[type=text] {
         display: inline-block;
@@ -6,7 +8,7 @@
         height: auto;
         font-size: 1em;
         border: none;
-        color: #dbdbdb;
+        color: $tt-white;
         background: none;
     }
 
