--- a/src/components/home/user-controls/user-controls.scss
+++ b/src/components/home/user-controls/user-controls.scss
@@ -1,11 +1,25 @@
+@import '../../../variables';
+
 #user-controls {
-    margin-top: 100px;
-    // display: inline-block;
-    display: none;
-    text-align: right;
-    width: 200px;
+    display: inline-block;
+    width: 100%;
+
+    p {
+        text-align: center;
+        color: $tt-white;
+        margin: 0;
+        line-height: 3.5em;
+    }
 
     a:hover {
         cursor: pointer;
+    }
+}
+
+@media (min-width: $break-sm) {
+    #user-controls {
+        p {
+            text-align: right;
+        }
     }
 }
