--- a/src/components/home/views/task-list-view/task-list-new-item/empty-task-list-new-item.scss
+++ b/src/components/home/views/task-list-view/task-list-new-item/empty-task-list-new-item.scss
@@ -1,3 +1,5 @@
+@import '../../../../../variables';
+
 .empty-task-list-new-item {
     margin: 40px 0 0 0;
     padding: 0;
@@ -15,22 +17,22 @@
 
         &::-moz-placeholder {
             font-style: normal;
-            color: #888888;
+            color: $tt-greymd;
         }
 
         &:-moz-placeholder {
             font-style: normal;
-            color: #888888;
+            color: $tt-greymd;
         }
 
         &::-webkit-input-placeholder {
             font-style: normal;
-            color: #888888;
+            color: $tt-greymd;
         }
-            
+
         &:-ms-input-placeholder {
             font-style: normal;
-            color: #888888;
+            color: $tt-greymd;
         }
     }
 }
