--- a/src/components/auth/registration-form.scss
+++ b/src/components/auth/registration-form.scss
@@ -1,3 +1,5 @@
+@import '../../variables';
+
 #register {
     margin-left: 40px;
 
@@ -12,10 +14,10 @@
     }
 
     .invalid {
-        color: #b94a48;
+        color: $err-text;
     }
 
     .valid {
-        color: #7da468;
+        color: $tt-greenlt;
     }
 }
