--- a/src/components/buttons/button.scss
+++ b/src/components/buttons/button.scss
@@ -1,3 +1,5 @@
+@import '../../variables';
+
 #root {
     .btn {
         border-radius: 2px;
@@ -7,12 +9,12 @@
     }
 
     .btn-primary {
-        background-color: #7da468;
+        background-color: $tt-greenlt;
         border: none;
 
         &:focus,
         &:hover {
-            background-color: #476039;
+            background-color: $tt-green;
         }
     }
 }
