--- a/src/components/fields/checkbox/checkbox.scss
+++ b/src/components/fields/checkbox/checkbox.scss
@@ -1,3 +1,5 @@
+@import '../../../variables';
+
 input[type=checkbox] {
     display: none;
 }
@@ -6,7 +8,7 @@ input[type=checkbox] + label {
     width: 15px;
     height: 15px;
     display: inline-block;
-    border: 1px solid #e6e6e8;
+    border: 1px solid $tt-white;
     padding: 0;
     vertical-align: middle;
 
