--- a/src/components/fields/text-field.scss
+++ b/src/components/fields/text-field.scss
@@ -1,14 +1,16 @@
+@import '../../variables';
+
 input[type=text],
 textarea,
 textarea.form-control {
-    border: 1px solid #e6e6e8;
+    border: 1px solid $tt-greylt;
     -webkit-box-shadow: none;
     box-shadow: none;
     transition: none;
-            
+
     &:focus {
         outline: none;
-        border-color: #e6e6e8;
+        border-color: $tt-white;
         box-shadow: none;
         -webkit-box-shadow: none;
     }
