--- a/src/components/home/group-filter/group-filter-actions.scss
+++ b/src/components/home/group-filter/group-filter-actions.scss
@@ -1,6 +1,8 @@
+@import '../../../variables';
+
 .group-filter-actions {
     float: right;
-    color: #888888;
+    color: $tt-greymd;
     margin-left: 10px;
 
     span,
@@ -8,7 +10,7 @@
         padding: 2px 5px;
 
         &:hover {
-            color: #DBDBDB;
+            color: $tt-white;
             cursor: pointer;
         }
     }
