--- a/src/components/home/layout/header/header.scss
+++ b/src/components/home/layout/header/header.scss
@@ -1,6 +1,7 @@
+@import '../../../../variables';
+
 header {
-    background: #222222;
-    // border-bottom: 5px solid #5E804D;
+    background: $tt-black;
     width: 100%;
     font-size: .9em;
 }
