--- a/src/components/home/views/task-list-view/task-list-filter-container/task-list-group-filter-indicator.scss
+++ b/src/components/home/views/task-list-view/task-list-filter-container/task-list-group-filter-indicator.scss
@@ -1,7 +1,9 @@
+@import '../../../../../variables';
+
 .task-list-group-filter-indicator {
     // float: right;
     padding: 0 0 10px 0;
     font-size: .9em;
     text-align: right;
-    color: #888888;
+    color: $tt-greymd;
 }
