--- a/src/components/home/views/task-list-view/task-list-item/task-list-item.scss
+++ b/src/components/home/views/task-list-view/task-list-item/task-list-item.scss
@@ -1,7 +1,9 @@
+@import '../../../../../variables';
+
 .task-list-item {
     width: 100%;
     padding: 15px;
-    background: #ffffff;
+    background: $tt-white;
     margin-bottom: 5px;
 
     .task-brief {
@@ -12,7 +14,7 @@
         input {
             display: inline-block;
             background: none;
-            border: 1px solid #ffffff;
+            border: 1px solid $tt-white;
             font-size: 1.1em;
 
             &:hover {
@@ -38,7 +40,6 @@
         .task-name {
             margin-left: 0;
             font-size: 1.3em;
-            // font-family: 'Roboto';
             font-weight: 300;
         }
 
@@ -52,13 +53,13 @@
     .task-brief.task-complete .task-name {
         input {
             text-decoration: line-through;
-            color: #cccccc;
+            color: $tt-greylt;
         }
     }
 
     .task-brief.edit-mode {
         input {
-            border: 1px solid #e6e6e8;
+            border: 1px solid $tt-white;
 
             &:hover {
                 cursor: inherit;
@@ -75,7 +76,7 @@
 
         .task-details-message {
             font-size: .8em;
-            color: #888888;
+            color: $tt-greymd;
             margin-left: 10px;
             display: inline-block;
 
