--- a/src/components/home/views/task-list-view/task-list-new-item/task-list-new-item.scss
+++ b/src/components/home/views/task-list-view/task-list-new-item/task-list-new-item.scss
@@ -1,5 +1,7 @@
+@import '../../../../../variables';
+
 .task-list-new-item {
-    background: #F5F3F2;
+    background: $tt-white;
     margin-top: 10px;
     padding: 0px 15px 0px 45px;
 
@@ -18,22 +20,22 @@
 
         &::-moz-placeholder {
             font-style: normal;
-            color: #888888;
+            color: $tt-greymd;
         }
 
         &:-moz-placeholder {
             font-style: normal;
-            color: #888888;
+            color: $tt-greymd;
         }
 
         &::-webkit-input-placeholder {
             font-style: normal;
-            color: #888888;
+            color: $tt-greymd;
         }
-            
+
         &:-ms-input-placeholder {
             font-style: normal;
-            color: #888888;
+            color: $tt-greymd;
         }
     }
 }
