--- a/src/components/home/views/task-list-view/task-list-placeholder.scss
+++ b/src/components/home/views/task-list-view/task-list-placeholder.scss
@@ -1,7 +1,9 @@
+@import '../../../../variables';
+
 .task-list-placeholder {
     margin: 20px 0 0 0;
     font-size: 1.3em;
-    color: #888888;
+    color: $tt-greymd;
     text-align: center;
 
     .large {
