--- a/src/components/labels/label.scss
+++ b/src/components/labels/label.scss
@@ -1,3 +1,5 @@
+@import '../../variables';
+
 .label {
     font-size: .7em;
     text-align: center;
@@ -7,5 +9,5 @@
 }
 
 .orange-label {
-    background: #edaa7d;
+    background: $warn-text;
 }
