--- a/src/components/module/module.scss
+++ b/src/components/module/module.scss
@@ -1,5 +1,7 @@
+@import '../../variables';
+
 .analytics-module {
-    background: #ffffff;
+    background: $tt-white;
     padding-left: 0;
     padding-right: 0;
 }
