feat: among other slight changes, responsive layout

--- a/src/components/fields/checkbox/checkbox.scss
+++ b/src/components/fields/checkbox/checkbox.scss
@@ -8,7 +8,7 @@ input[type=checkbox] + label {
     width: 15px;
     height: 15px;
     display: inline-block;
-    border: 1px solid $tt-white;
+    border: 1px solid $tt-greymd;
     padding: 0;
     vertical-align: middle;
 
