--- a/src/components/home/analytics/analytics.scss
+++ b/src/components/home/analytics/analytics.scss
@@ -2,7 +2,7 @@
 
 #analytics {
     background: $tt-white;
-    border-top: 5px solid $tt-green;
+    // border-top: 5px solid $tt-green;
     // position: fixed;
     // left: 275px;
     // bottom: 0;
