--- a/src/components/home/views/task-list-view/task-list-item/task-list-item.scss
+++ b/src/components/home/views/task-list-view/task-list-item/task-list-item.scss
@@ -1,51 +1,75 @@
 @import '../../../../../variables';
 
 .task-list-item {
-    width: 100%;
+    // width: 100%;
+
     padding: 15px;
-    background: $tt-white;
-    margin-bottom: 5px;
+    background: #eeeeee;
+    margin-bottom: 10px;
 
     .task-brief {
         display: inline-block;
-        width: calc(100% - 30px);
-        margin: 0 0 0 15px;
+
+        .angle-icon {
+            width: 100%;
+            text-align: right;
+        }
 
         input {
             display: inline-block;
             background: none;
-            border: 1px solid $tt-white;
+            border: 0;
+            border-bottom: 1px solid #eeeeee;
             font-size: 1.1em;
 
             &:hover {
                 cursor: pointer;
             }
+
+            &:focus {
+                border: 0;
+                border-bottom: 1px solid $tt-greylt;
+            }
+        }
+
+        input.form-control {
+            text-overflow: ellipsis;
         }
 
         i {
-            width: 20px;
-            padding: 15px 0 5px 0;
-            text-align: center;
-
             &:hover {
                 cursor: pointer;
             }
         }
 
+        .right-angle, .down-angle {
+            width: 100%;
+            text-align: right;
+        }
+
         // children of flexbox row
         div > div {
-            margin-left: 10px;
+            // margin-left: 20px;
         }
 
         .task-name {
-            margin-left: 0;
+            // margin-left: 0;
             font-size: 1.3em;
             font-weight: 300;
         }
 
         .date-box {
-            input {
-                padding: 2px;
+            .date-picker {
+                div {
+                    width: 100%;
+                }
+
+                input {
+                    // padding: 2px;
+                    margin: 0;
+                    padding: 0;
+                    width: 100%;
+                }
             }
         }
     }
@@ -59,7 +83,7 @@
 
     .task-brief.edit-mode {
         input {
-            border: 1px solid $tt-white;
+            border-bottom: 1px solid $tt-greylt;
 
             &:hover {
                 cursor: inherit;
@@ -68,7 +92,7 @@
     }
 
     .task-details {
-        margin: 15px 30px 0 30px;
+        // margin: 15px 30px 0 30px;
 
         textarea.form-control {
             height: 100px;
@@ -77,7 +101,7 @@
         .task-details-message {
             font-size: .8em;
             color: $tt-greymd;
-            margin-left: 10px;
+            // margin-left: 10px;
             display: inline-block;
 
             /*&:after {
