--- a/src/components/home/group-filter/group-filter-list.scss
+++ b/src/components/home/group-filter/group-filter-list.scss
@@ -1,3 +1,8 @@
 .group-filter-list {
-    padding: 10px 0 10px 10px;
+    padding: 10px 0;
+
+    .group-filter-list {
+        padding-top: 0;
+        padding-left: 20px;
+    }
 }
