--- a/src/components/home/views/task-list-view/task-list-new-item/task-list-new-item.scss
+++ b/src/components/home/views/task-list-view/task-list-new-item/task-list-new-item.scss
@@ -1,7 +1,7 @@
 @import '../../../../../variables';
 
 .task-list-new-item {
-    background: $tt-white;
+    // background: $tt-white;
     margin-top: 10px;
     padding: 0px 15px 0px 45px;
 
