--- a/src/components/home/layout/header/header.scss
+++ b/src/components/home/layout/header/header.scss
@@ -1,6 +1,10 @@
 @import '../../../../variables';
 
 header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
     background: $tt-black;
     width: 100%;
     font-size: .9em;
