--- a/src/variables.scss
+++ b/src/variables.scss
@@ -12,7 +12,7 @@ $tt-black: #222222;
 $tt-greydk: #444444;
 $tt-greymd: #787878;
 $tt-greylt: #bbbbbb;
-$tt-white: #dddddd;
+$tt-white: #f5f3f2;
 
 // error colors
 $err-text: #b94a48;
