--- a/src/components/home/analytics/analytics.scss
+++ b/src/components/home/analytics/analytics.scss
@@ -1,7 +1,7 @@
 @import '../../../variables';
 
 #analytics {
-    background: #eeeeee;
+    background: #ffffff;
     position: absolute;
     bottom: 0;
     width: calc(100% - 30px);
