--- a/src/variables.scss
+++ b/src/variables.scss
@@ -4,15 +4,16 @@ $break-md: 992px;
 $break-lg: 1200px;
 
 // basic colors
-$tt-green: #5E804D;
 $tt-greendk: #476039;
+$tt-green: #5E804D;
 $tt-greenlt: #7DA468;
 
 $tt-black: #222222;
 $tt-greydk: #444444;
 $tt-greymd: #787878;
 $tt-greylt: #bbbbbb;
-$tt-white: #f5f3f2;
+$tt-greyltr: #dbdbdb;
+$tt-white: #f3f3f3;
 
 // error colors
 $err-text: #b94a48;
