feat: only show group filter actions on hover

--- a/src/components/home/group-filter/group-filter-header.scss
+++ b/src/components/home/group-filter/group-filter-header.scss
@@ -28,4 +28,14 @@
             cursor: pointer;
         }
     }
+
+    .group-filter-actions {
+        display: none;
+    }
+
+    &:hover {
+        .group-filter-actions {
+            display: inherit;
+        }
+    }
 }
