fix: move group filter indicator in line with filters

--- a/src/components/home/views/task-list-view/task-list-filter-container/task-list-group-filter-indicator.scss
+++ b/src/components/home/views/task-list-view/task-list-filter-container/task-list-group-filter-indicator.scss
@@ -1,7 +1,7 @@
 @import '../../../../../variables';
 
 .task-list-group-filter-indicator {
-    // float: right;
+    float: right;
     padding: 0 0 10px 0;
     font-size: .9em;
     text-align: right;
