--- a/src/components/fields/checkbox/checkbox.scss
+++ b/src/components/fields/checkbox/checkbox.scss
@@ -1,24 +1,29 @@
 @import '../../../variables';
 
-input[type=checkbox] {
-    display: none;
-}
+.tt-checkbox {
+    display: inline-block !important;
 
-input[type=checkbox] + label {
-    width: 15px;
-    height: 15px;
-    display: inline-block;
-    border: 1px solid $tt-greyltr;
-    padding: 0;
-    vertical-align: middle;
-
-    &:hover {
-        cursor: pointer;
+    input[type=checkbox] {
+        display: none;
     }
-}
 
-input[type=checkbox]:checked + label {
-    background: url('/assets/images/checkmark-green-3.png') no-repeat;
-    background-size: 100%;
-    border: 0;
+    input[type=checkbox] + label {
+        width: 15px;
+        height: 15px;
+        display: inline-block;
+        border: 1px solid $tt-greyltr;
+        padding: 0;
+        vertical-align: middle;
+        margin-bottom: 1px;
+
+        &:hover {
+            cursor: pointer;
+        }
+    }
+
+    input[type=checkbox]:checked + label {
+        background: url('/assets/images/checkmark-green-3.png') no-repeat;
+        background-size: 100%;
+        border: 0;
+    }
 }
