--- a/src/components/fields/text-field.scss
+++ b/src/components/fields/text-field.scss
@@ -1,15 +1,36 @@
 @import '../../variables';
 
-input[type=text],
+.tt-text-box input[type=text],
 textarea,
 textarea.form-control {
     -webkit-box-shadow: none;
     box-shadow: none;
     transition: none;
+    padding: 10px 15px;
 
     &:focus {
         outline: none;
         box-shadow: none;
         -webkit-box-shadow: none;
+    }
+
+    &::-moz-placeholder {
+        font-style: normal;
+        font-size: .9em;
+    }
+
+    &:-moz-placeholder {
+        font-style: normal;
+        font-size: .9em;
+    }
+
+    &::-webkit-input-placeholder {
+        font-style: normal;
+        font-size: .9em;
+    }
+
+    &:-ms-input-placeholder {
+        font-style: normal;
+        font-size: .9em;
     }
 }
