style: reduce task height

--- a/src/components/home/views/task-list-view/task-list-item/task-list-item-brief.scss
+++ b/src/components/home/views/task-list-view/task-list-item/task-list-item-brief.scss
@@ -32,7 +32,7 @@
     .task-name {
         margin-right: 15px;
         width: calc(100% - 30px - 10px - 62px - 60px);  // 100% - checkbox - margin - actions - dates
-        font-size: 1.3em;
+        font-size: 14px;
         font-weight: 300;
     }
 
