--- a/src/components/home/views/task-list-view/task-list-item/task-list-item.scss
+++ b/src/components/home/views/task-list-view/task-list-item/task-list-item.scss
@@ -1,8 +1,8 @@
 .task-list-item {
-    padding: 15px;
+    padding: 10px 15px;
     background: #ffffff;
     margin-bottom: 5px;
-    min-height: 68px;
+    min-height: 58px;
 
     &:hover {
         .tt-action-icon {
