--- a/src/components/fields/text-area.scss
+++ b/src/components/fields/text-area.scss
@@ -1,7 +1,7 @@
 @import './text-field.scss';
 
-textarea,
-textarea.form-control {
+.tt-text-area {
+    width: 100%;
     height: 150px;
     padding: 10px;
 }
