--- a/src/components/home/views/task-list-view/task-list-item/task-list-item-actions.scss
+++ b/src/components/home/views/task-list-view/task-list-item/task-list-item-actions.scss
@@ -1,4 +1,8 @@
 .task-list-item-actions {
     display: inline-block;
     margin-right: 15px;
+
+    .tt-dropdown-menu {
+        display: inline-block;
+    }
 }
