--- a/src/components/home/views/task-list-view/task-list-item/task-list-item-details.scss
+++ b/src/components/home/views/task-list-view/task-list-item/task-list-item-details.scss
@@ -1,8 +1,8 @@
 @import '../../../../../variables';
 
 .task-details {
-    textarea.form-control {
-        height: 100px;
+    .tt-text-area {
+        margin-bottom: 5px;
     }
 
     .task-details-message {
