style: lighten header border color

--- a/src/components/home/layout/header/header.scss
+++ b/src/components/home/layout/header/header.scss
@@ -4,7 +4,7 @@ header {
     background: $tt-black;
     width: 100%;
     font-size: .9em;
-    border-bottom: 5px solid $tt-green;
+    border-bottom: 5px solid $tt-greenlt;
 }
 
 @media (min-width: $break-md) {
