feat: convert header user controls to dropdown menu

--- a/src/components/dropdown-menu/dropdown-menu-item.scss
+++ b/src/components/dropdown-menu/dropdown-menu-item.scss
@@ -4,8 +4,10 @@
     width: 100%;
     padding: 5px 10px;
     
-    &:hover {
-        background: #f3f3f3;
-        cursor: pointer;
+    &.clickable {
+        &:hover {
+            background: #f3f3f3;
+            cursor: pointer;
+        }
     }
 }
