--- a/src/components/dropdown-menu/dropdown-menu-items.scss
+++ b/src/components/dropdown-menu/dropdown-menu-items.scss
@@ -1,12 +1,11 @@
 .tt-dropdown-menu-items {
     width: 200px;
 	position: absolute;
-    right: 75px;
 	background: #ffffff;
 	border: 1px solid #e5e5e5;
     z-index: 1000;
 	padding: 2px;
-    //box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.40);
+	margin-top: 5px;
 }
 
 .tt-dropdown-menu-items:after, .tt-dropdown-menu-items:before {
