--- a/src/index.scss
+++ b/src/index.scss
@@ -16,7 +16,13 @@ body {
 }
 
 h1 {
+    margin-top: 0;
+    font-family: 'Open Sans', Arial, sans-serif;
+    font-weight: 300;
 
+    .tt-icon {
+        margin-right: 10px;
+    }
 }
 
 h2 {
