--- a/src/index.scss
+++ b/src/index.scss
@@ -15,33 +15,39 @@ body {
     min-width: 350px;
 }
 
-h1 {
+h1, h2, h3, h4, h5, h6,
+.h1, .h2, .h3, .h4, .h5, .h6 {
     margin-top: 0;
     font-family: 'Open Sans', Arial, sans-serif;
     font-weight: 300;
+}
+
+h1, .h1 {
+    font-size: 30px;
 
     .tt-icon {
         margin-right: 10px;
     }
 }
 
-h2 {
+h2, .h2 {
+    margin-top: 20px;
+    font-size: 20px;
+}
+
+h3, .h3 {
 
 }
 
-h3 {
+h4, .h4 {
 
 }
 
-h4 {
+h5, .h5 {
 
 }
 
-h5 {
-
-}
-
-h6 {
+h6, .h6 {
 
 }
 
