--- a/src/components/home/workspace/views/task-list-view/task-list-item/task-list-item.scss
+++ b/src/components/home/workspace/views/task-list-view/task-list-item/task-list-item.scss
@@ -2,7 +2,7 @@
     padding: 10px 15px;
     background: #ffffff;
     margin-bottom: 5px;
-    min-height: 58px;
+    border: 1px solid #eaeaea;
 
     &:hover {
         .tt-action-icon {
