--- a/src/components/home/sidebar/sidebar-module.scss
+++ b/src/components/home/sidebar/sidebar-module.scss
@@ -7,8 +7,21 @@
         font-weight: 500;
         margin-bottom: 15px;
         padding-bottom: 4px;
-        border-bottom: 1px solid #E3E3E3;
         text-transform: uppercase;
         letter-spacing: 1px;
+    }
+
+    a {
+        color: #b2b2b2;
+        font-size: 12px;
+        border-left: 3px solid #2e3035;
+        padding: 1px 0 0px 10px;
+        margin-left: 10px;
+        width: 100%;
+
+        &:hover {
+            border-left: 3px solid #73956F;
+            color: white;
+        }
     }
 }
