--- a/assets/stylesheets/_typography.scss
+++ b/assets/stylesheets/_typography.scss
@@ -1,7 +1,6 @@
 body {
     font-family: 'Open Sans', Arial, sans-serif;
     font-size: 13px;
-    //color: #5b5b5b;
     color: #939393;
 }
 
@@ -16,4 +15,15 @@ a {
 
 a.light {
     color: #fff;
+}
+
+.page-title {
+    font-size: 18px;
+    margin-bottom: 10px;
+    color: #1a1a1a;
+}
+
+.page-subtitle {
+    font-size: 11px;
+    margin-left: 1px;
 }
