--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -1,10 +1,11 @@
 @import '../../../assets/styles/_variables.scss';
 
 .sidebar {
-    width: 250px;
-    height: 100vh;
     background: $tt-primary-dk;
     border-right: 1px solid $tt-primary-border;
+    float: left;
+    height: 100vh;
+    width: 250px;
 
     .status-filter-collection {
         .toggle-switch {
