feat: add page info and navigation

--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -15,6 +15,8 @@ $tt-greylt: #bbbbbb;
 $tt-greyltr: #dbdbdb;
 $tt-white: #f6f6f8;
 
+$tt-accent-red: #a33b20;
+
 // error colors
 $err-text: #b94a48;
 $err-border: #eed3d7;
