--- a/src/components/workspace-header/workspace-header.scss
+++ b/src/components/workspace-header/workspace-header.scss
@@ -1,23 +1,17 @@
 .workspace-header {
-    width: calc(100% - 250px);
-    float: right;
+    background: white;
+    box-shadow: 0 0 8px #aaa;
+    color: #939393;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    z-index: 1000;
 
-    header {
-        display: flex;
-        justify-content: space-between;
-        box-shadow: 0 0 8px #aaa;
-        color: #939393;
-
-        #sidebar-trigger {
-            display: none;
-        }
-
-        i {
-            font-size: 15px !important;
-        }
+    i {
+        font-size: 15px !important;
     }
 
-    & > div {
-        height: calc(100vh - 40px);
+    #sidebar-trigger {
+        display: none;
     }
 }
