refactor: rename textbox

--- a/src/components/textbox/textbox.scss
+++ b/src/components/textbox/textbox.scss
@@ -1,6 +1,6 @@
 @import 'assets/styles/_variables';
 
-.text-box {
+.textbox {
     border: 1px solid $tt-greyltr;
     -webkit-box-shadow: none;
     box-shadow: none;
