feat: add incognito textbox styling

--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -17,6 +17,8 @@ $tt-white: #f6f6f8;
 
 $tt-accent-red: #a33b20;
 
+$tt-borderlt: #eaeaea;
+
 // error colors
 $err-text: #b94a48;
 $err-border: #eed3d7;
