--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -11,7 +11,7 @@
         width: 15px;
         height: 15px;
         display: inline-block;
-        border: 1px solid $tt-greyltr;
+        border: 1px solid $tt-borderlt;
         padding: 0;
         vertical-align: middle;
         margin-bottom: 1px;
