--- a/src/components/logo/logo.scss
+++ b/src/components/logo/logo.scss
@@ -5,9 +5,11 @@
     align-items: center;
 
     a {
+        font-family: "Roboto";
         font-size: .8em;
+        font-weight: 300;
         letter-spacing: 1px;
-        text-transform: uppercase;
+        text-transform: capitalize;
 
         &:hover {
             text-decoration: none;
@@ -15,10 +17,11 @@
     }
 
     figure {
-        width: 25px;
-        height: 25px;
         background-size: cover;
         display: inline-block;
+        height: 25px;
+        margin: -2px 2px 0 0;
+        width: 25px;
     }
 }
 
